<resources>
    <string name="app_name">Venta Uno</string>
    <string name="mensaje">Entérate de lo que está pasando en el mundo en este momento</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="tienes_cuenta">¿Ya tienes una cuenta?</string>
    <string name="iniciar_sesion">Iniciar sesión</string>


    <!-- Iniciar sesión -->
    <string name="usuario">Usuario</string>
    <string name="usuario_hint">Nombre de usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="contrasena_hint">Ingrese contraseña</string>

    <string name="informacion">Información</string>
    <string name="acerca_de">Acerca de</string>
    <string name="terminos_condiciones">Términos y condiciones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="mision">Misión</string>
    <string name="vision">Visión</string>
    <string name="historia">Historia</string>

    <string name="mision_contenido">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque aliquam consectetur magna, vitae tincidunt nibh ultrices quis. Quisque maximus turpis nec enim fermentum \n\n varius. Quisque nisl ipsum, porta ut bibendum eu, fringilla vel ipsum. Suspendisse sit amet neque sit amet odio pretium auctor posuere ultricies orci. Nullam mollis ante nec velit tristique posuere. Phasellus arcu quam, eleifend quis lacus in,\n\n elementum tempus ligula. Mauris sagittis laoreet turpis, ac tincidunt sapien. Morbi pulvinar ac enim ut congue. Integer in justo vel erat imperdiet condimentum. Ut sit amet accumsan lacus. Maecenas sed lacinia sapien. Maecenas imperdiet est et eros ultrices, \n\neget tristique felis molestie. Vivamus in scelerisque nulla. Integer euismod diam dapibus justo aliquet dictum. Donec non lorem urna.

</string>
    <string name="vision_contenido">Sed facilisis nibh a imperdiet blandit. In pulvinar rutrum dignissim. Sed imperdiet ante sed augue convallis scelerisque. Ut in tristique metus. Sed sit amet justo eget massa iaculis\n\n sodales nec vitae eros. Aenean cursus dignissim sem, non ullamcorper risus rutrum vitae. Phasellus in nibh porttitor, condimentum erat eu, luctus nibh. Curabitur vehicula volutpat neque in pulvinar. Class aptent taciti sociosqu ad litora \n\ntorquent per conubia nostra, per inceptos himenaeos. Sed arcu dolor, suscipit ac felis in, blandit viverra ex. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.

</string>
    <string name="historia_contenido">Morbi at est odio. Aenean blandit ultricies lacus ut luctus. Proin sodales congue faucibus. Mauris tempor ut lacus in feugiat. Sed consectetur maximus est, ac consequat massa ultrices\n\n vitae. Pellentesque euismod ligula nec felis elementum fermentum. Etiam a enim a libero sagittis tincidunt sed bibendum tellus. Duis id tincidunt nisl. Etiam rhoncus mattis odio vitae lobortis. Suspendisse eu placerat eros. Aenean nisi\n\n orci, dignissim ac scelerisque non, commodo in purus. Aenean non massa tristique, ornare neque a, gravida arcu. Mauris at sodales mi, non iaculis tortor. Donec bibendum magna vel aliquam mollis. Mauris lobortis convallis velit et tristique.\n\n Nullam auctor condimentum augue nec euismod.

</string>
    <string name="title_activity_escritorio">EscritorioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="guardar_inicio_de_sesion">Guardar inicio de sesión</string>


</resources>
