<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.davidchura.mijaco.AcercadeActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acerca_de"
        style="@style/MegaTexto"
        android:padding="@dimen/margen_ventana"
        android:background="#dddddd"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/llContenedor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="36dp"
            android:padding="48dp"
            android:background="#eeeeee"/>
        </ScrollView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_logo"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp">
            <RadioButton
                android:id="@+id/rbMision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/mision"/>
            <RadioButton
                android:id="@+id/rbVision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vision"/>
            <RadioButton
                android:id="@+id/rbHistoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/historia"/>
        </RadioGroup>

    </RelativeLayout>
</LinearLayout>